# agent-studio-installer

./: .gitignore  README.md  pyproject.toml
docs/: exercises.md
scripts/: sync-template.ps1
src/add_studio_shell/: __init__.py  __main__.py  cli.py  installer.py
src/add_studio_shell/templates/studio_shell/: agent_panel.py  app.py  navigation.py  shell_ui.py
src/add_studio_shell/templates/studio_shell/pages/: 1_Home.py  2_Playground.py
tests/: test_installer.py  test_navigation.py  test_reasoning_stream.py  test_shell_ui.py  test_studio_agent_adapter.py  test_user_settings.py
