[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-studio-installer"
version = "0.2.4"
description = "Install the workshop Studio Streamlit shell into an agent project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
add-studio-shell = "add_studio_shell.cli:main"

[tool.setuptools.package-data]
add_studio_shell = ["templates/studio_shell/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
